gccida/g2/expand_builtin_apply_args_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply_args_1/src/builtins.c:1568:28: error: use of undeclared identifier 'machine_mode'
v5 = get_mode_alignment( ( machine_mode)v4) >> 3; 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply_args_1/src/builtins.c:1572:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_REG( ( machine_mode)v4, v6); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply_args_1/src/builtins.c:1573:30: error: use of undeclared identifier 'machine_mode'
v8 = adjust_address_1( v1, ( machine_mode)v4, v2, 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply_args_1/src/builtins.c:1580:31: error: use of undeclared identifier 'machine_mode'
v10 = adjust_address_1( v1, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 0LL, 1, 1); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply_args_1/src/builtins.c:1586:31: error: use of undeclared identifier 'machine_mode'
v13 = adjust_address_1( v1, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v11, 1, 1); 
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply_args_1/src/obj/builtins.o] Error 1
